--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "description": "Proyecto del curso de Optimizacion Web de Platzi",
   "author": "@jonalvarezz",
+  "type": "module",
   "scripts": {
     "start": "npm run build; npm run serve",
     "dev": "webpack-dev-server --config webpack.config.dev.js",
     "build": "webpack --config webpack.config.js",
-    "serve": "serve . -p 3000"
+    "serve": "serve . -p 3000",
+    "start:node": "nodemon ./ssr/index.js"
   },
   "prettier": {
     "trailingComma": "es5",
@@ -22,10 +24,12 @@
   },
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/lodash": "^4.14.198",
     "css-loader": "^5.2.6",
     "husky": "^4.2.3",
     "hyperscript": "^2.0.2",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.21",
     "moment": "^2.24.0",
     "prettier": "1.19.1",
     "pretty-quick": "^2.0.1",
@@ -36,7 +40,9 @@
     "webpack-dev-server": "^3.11.3"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "modal-video": "^2.4.8",
+    "node": "^20.6.0",
     "serve": "^14.2.1"
   }
 }
