--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "webpack-dev-server --config webpack.config.dev.js",
     "build": "webpack --config webpack.config.cjs",
     "serve": "serve . -p 3000",
-    "build:node": "npm run build; node export.js"
+    "build:node": "npm run build; node export.js",
+    "netlify": "npm run build && node export.js"
   },
   "prettier": {
     "trailingComma": "es5",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/lodash": "^4.14.198",
+    "@types/lozad": "^1.16.2",
     "css-loader": "^5.2.6",
     "husky": "^4.2.3",
     "hyperscript": "^2.0.2",
@@ -41,6 +43,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "lozad": "^1.16.0",
     "modal-video": "^2.4.8",
     "node": "^20.6.0",
     "serve": "^14.2.1"
